6989139: Address JDBC Findbugs where Number type Constructor are used
Reviewed-by: ohair